Change WebView on ImageView (bad showing image, if height > width)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,14 +28,14 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="3"/>
-        <WebView
+        <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:background="@android:color/black">
-        </WebView>
+        </ImageView>
     </LinearLayout>
 
     <!-- Bottom Menu -->
