--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBackWindow">#4d7d770b</color>
 
     <color name="black_overlay">#66000000</color>
+    <color name="error">#ffff0000</color>
 </resources>
