--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.sedgw.pipboy_v11.MainActivity"
-    android:theme="@style/Theme.AppCompat.NoActionBar">
+    tools:context="com.example.sedgw.pipboy_v11.MainActivity">
     <!-- Main screen -->
     <LinearLayout
         android:orientation="vertical"
