--- a/app/src/main/res/layout/activity_DB_first.xml
+++ b/app/src/main/res/layout/activity_DB_first.xml
@@ -6,11 +6,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/Theme.AppCompat.NoActionBar">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <!-- edit and button "OK"-->
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
@@ -20,20 +19,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textVisiblePassword"
-            android:layout_centerHorizontal="true"
             android:textSize="@dimen/big_size_text"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
             android:hint="@string/back_code" />
 
-        <Button
-            android:text="@string/button_text"
-            android:textSize="@dimen/big_size_text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/button2"
-            android:layout_weight="1"
-            android:onClick="onClickOK"/>
+        <ImageButton
+            android:id="@+id/button_OK"
+            android:src="@drawable/gtasks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_horizontal_margin"
+            android:onClick="onClickOK" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <!-- keyboard -->
     <LinearLayout
@@ -45,7 +48,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView"
-            android:textColor="@color/error"/>
+            android:textColor="@color/error"
+            android:background="@drawable/appfunc_clear_selected"
+            android:textSize="@dimen/medium_size_text"
+            android:textAlignment="center"/>
     </LinearLayout>
 
 
