--- a/app/src/main/res/layout/activity_admin_list.xml
+++ b/app/src/main/res/layout/activity_admin_list.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/rightLL"
+        android:id="@+id/LL"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
         <!-- add new item panel -->
         <RelativeLayout
             android:layout_width="match_parent"
@@ -15,20 +16,59 @@
             android:background="@drawable/folderopenback"
             android:padding="@dimen/admin_horizontal_padding">
 
+            <RadioGroup
+                android:id="@+id/radio_group_type"
+                android:layout_width="@dimen/admin_width_rgroup"
+                android:layout_height="@dimen/admin_height_rgroup"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/folderopenback">
+                <RadioButton
+                    android:id="@+id/rbutton_object"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:drawableLeft="@drawable/menu_expendbar"/>
+                <RadioButton
+                    android:id="@+id/rbutton_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:drawableLeft="@drawable/menu_wallpaper"/>
+                <RadioButton
+                    android:id="@+id/rbutton_media"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:drawableLeft="@drawable/menu_feedback"/>
+            </RadioGroup>
+
             <EditText
                 android:id="@+id/edit_code"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/admin_width_edit"
                 android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/radio_group_type"
                 android:background="@drawable/appfunc_clear_selected"
-                android:gravity="center" />
+                android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:hint="@string/admin_code"
+                android:gravity="center"
+                android:maxLines="1"
+                android:inputType="text" />
             <EditText
                 android:id="@+id/edit_name"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/admin_width_edit"
                 android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/radio_group_type"
                 android:layout_below="@+id/edit_code"
                 android:background="@drawable/appfunc_clear_selected"
+                android:hint="@string/admin_name"
                 android:gravity="center"
-                android:layout_marginTop="@dimen/activity_horizontal_margin" />
+                android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:inputType="text"
+                android:maxLines="1" />
+
             <ImageButton
                 android:id="@+id/button_title"
                 android:layout_width="wrap_content"
@@ -91,28 +131,80 @@
                 android:src="@drawable/gallery"
                 android:background="@null"
                 android:onClick="onClickImage"/>
-
-
         </RelativeLayout>
         <!-- list of objects -->
-        <ListView
+        <LinearLayout
             android:id="@+id/leftLV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/folderopenback">
+            android:background="@drawable/folderopenback"
+            android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="7">
+                <ImageButton
+                    android:id="@+id/button_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="@dimen/activity_horizontal_margin"
+                    android:src="@drawable/gallery"
+                    android:background="@null"
+                    android:onClick="onClickView"/>
+                <ImageButton
+                    android:id="@+id/button_add"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="@dimen/activity_horizontal_margin"
+                    android:layout_toLeftOf="@+id/button_view"
+                    android:src="@drawable/gallery"
+                    android:background="@null"
+                    android:onClick="onClickAdd"/>
+                <ImageButton
+                    android:id="@+id/button_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="@dimen/activity_horizontal_margin"
+                    android:layout_toRightOf="@+id/button_view"
+                    android:src="@drawable/gallery"
+                    android:background="@null"
+                    android:onClick="onClickDelete"/>
 
 
-        </ListView>
+            </RelativeLayout>
+            <ListView
+                android:id="@+id/list_items"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/folderopenback"
+                android:layout_weight="3">
+
+            </ListView>
+
+        </LinearLayout>
     </LinearLayout>
 
+    <EditText
+        android:id="@+id/edit_title"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/folderopenback"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:visibility="invisible"/>
     <ImageButton
         android:id="@+id/button_title_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_margin="@dimen/admin_title_button"
         android:background="@null"
         android:src="@drawable/d_add"
         android:visibility="invisible"
@@ -124,7 +216,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_margin="@dimen/admin_title_button"
         android:background="@null"
         android:src="@drawable/trashcan"
         android:visibility="invisible"
