--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,11 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin_big">30dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="big_size_text">80sp</dimen>
     <dimen name="medium_size_text">50sp</dimen>
+    <dimen name="small_size_text">25sp</dimen>
     <dimen name="activity_admin_main_horizontal_margin">200dp</dimen>
     <dimen name="activity_admin_main_vertical_margin">80dp</dimen>
     <dimen name="admin_horizontal_padding">8dp</dimen>
@@ -11,5 +13,6 @@
     <dimen name="admin_height_rgroup">170dp</dimen>
     <dimen name="admin_width_rgroup">90dp</dimen>
     <dimen name="admin_title_button">30dp</dimen>
+    <dimen name="settings_button_margin">50dp</dimen>
 
 </resources>
