--- a/app/src/main/res/layout/activity_osmmaps.xml
+++ b/app/src/main/res/layout/activity_osmmaps.xml
@@ -5,7 +5,28 @@
     android:layout_height="match_parent">
     <org.osmdroid.views.MapView android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_h"/>
+    <TextView
+        android:id="@+id/textview_coordinates"
+        android:background="@color/black"
+        android:textColor="@color/text"
+        android:textSize="@dimen/small_size_text"
+        android:text="@string/maps_coordiantes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"/>
+    <ImageButton
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/alert"
+        android:background="@null"
+        android:onClick="onClickLocation"/>
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
