--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="colorBackWindow">#4d7d770b</color>
 
     <color name="black_overlay">#66000000</color>
-    <color name="error">#00000000</color>
+    <color name="error">#FF0000</color>
+    <color name="text">#F5F5F5</color>
+    <color name="black">#000000</color>
 </resources>
