--- a/app/src/main/res/layout/activity_admin_list.xml
+++ b/app/src/main/res/layout/activity_admin_list.xml
@@ -30,7 +30,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:drawableLeft="@drawable/menu_expendbar"/>
+                    android:drawableLeft="@drawable/menu_expendbar"
+                    android:checked="true"/>
                 <RadioButton
                     android:id="@+id/rbutton_message"
                     android:layout_width="wrap_content"
@@ -132,6 +133,7 @@
                 android:background="@null"
                 android:onClick="onClickImage"/>
         </RelativeLayout>
+
         <!-- list of objects -->
         <LinearLayout
             android:id="@+id/leftLV"
