small fix errors on DBview, weather

--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -84,6 +84,16 @@
 
     </LinearLayout>
 
+    <ImageButton
+        android:id="@+id/button_sync"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@null"
+        android:src="@drawable/sync"
+        android:onClick="onClickSync"/>
+
     <Button
         android:id="@+id/button_back"
         android:layout_width="wrap_content"
